feat: create basic program to generate fake datasets

--- a/GenerateBigData/GenerateBigData.csproj
+++ b/GenerateBigData/GenerateBigData.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Bogus" Version="34.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Samples\" />
+  </ItemGroup>
+
 </Project>
