--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,7 @@
 {
     "version": "0.2.0",
     "configurations": [
+    
         {
             "name": "Python: Current File",
             "type": "python",
@@ -21,6 +22,22 @@
             "program": "${workspaceFolder}/CosmosDB-Quickstart-DotNet/CosmosGettingStartedTutorial/bin/Debug/netcoreapp3.1/CosmosGettingStarted.dll",
             "args": [],
             "cwd": "${workspaceFolder}/CosmosDB-Quickstart-DotNet/CosmosGettingStartedTutorial",
+            // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
+            "console": "internalConsole",
+            "stopAtEntry": false
+        },
+        {
+            // Use IntelliSense to find out which attributes exist for C# debugging
+            // Use hover for the description of the existing attributes
+            // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
+            "name": ".NET Core House",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build-house",
+            // If you have changed target frameworks, make sure to update the program path.
+            "program": "${workspaceFolder}/BasicMachineLearning/PredictHousePrice/bin/Debug/net6.0/PredictHousePrice.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/BasicMachineLearning/PredictHousePrice",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "internalConsole",
             "stopAtEntry": false
